--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main>
         <div class="wrap">
             <iframe class="cat-1" src="https://thiscatdoesnotexist.com/"></iframe>
-            <button onclick="refreshIframe1()">refresh frame 1</button>
+            <button onclick="refreshIframe1()">refresh cat 1</button>
         </div>
         <div class="wrap"><iframe class="cat-2" src="https://thiscatdoesnotexist.com/"></iframe>
-            <button onclick="refreshIframe2()">refresh frame 2</button>
+            <button onclick="refreshIframe2()">refresh cat 2</button>
         </div>
     </main>
 </body>
